fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  text-align: left;
+  text-align: center;
 }
 
 .app {
